[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Art/Art.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Scripts/TapBuffer.gd" type="Script" id=4]

[sub_resource type="Animation" id=7]
resource_name = "Falling"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jumping"

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Sliding"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Sprinting"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=15]
resource_name = "WALLSLIDE"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walking"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 2 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Walljump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Walljump2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 24.0
height = 64.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 56.0

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0.015873, 1 )
colors = PoolColorArray( 1, 1, 1, 0.498039, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.67
color = Color( 0, 0.976471, 1, 1 )
color_ramp = SubResource( 13 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 608, 32 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 32, 164 )

[node name="Scene" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( -32, 32 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 2 )
hframes = 3
vframes = 3

[node name="Camera" type="Camera2D" parent="Player"]
position = Vector2( -40, 24 )
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="Animation" type="AnimationPlayer" parent="Player"]
anims/Falling = SubResource( 7 )
anims/Idle = SubResource( 3 )
anims/Jumping = SubResource( 8 )
anims/RESET = SubResource( 4 )
anims/Sliding = SubResource( 6 )
anims/Sprinting = SubResource( 11 )
anims/WALLSLIDE = SubResource( 15 )
anims/Walking = SubResource( 5 )
anims/Walljump = SubResource( 16 )
anims/Walljump2 = SubResource( 17 )

[node name="CollisionSliding" type="CollisionShape2D" parent="Player"]
position = Vector2( -40, 56 )
rotation = 1.5708
shape = SubResource( 9 )
disabled = true

[node name="CollisionStanding" type="CollisionShape2D" parent="Player"]
position = Vector2( -36, 30 )
shape = SubResource( 1 )

[node name="Trail" type="Particles2D" parent="Player"]
position = Vector2( -40, 32 )
scale = Vector2( 0.667, 0.667 )
emitting = false
amount = 5
lifetime = 0.5
speed_scale = 2.0
process_material = SubResource( 14 )

[node name="TapBuffer" type="Node" parent="Player"]
script = ExtResource( 4 )

[node name="Terrain1" type="StaticBody2D" parent="."]
position = Vector2( 2, 142 )

[node name="Sprite" type="Sprite" parent="Terrain1"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 350, 18 )
scale = Vector2( 19, 1 )
texture = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="Terrain1"]
position = Vector2( 350, 18 )
shape = SubResource( 2 )

[node name="Terrain2" type="StaticBody2D" parent="."]
position = Vector2( 312, 24 )

[node name="Sprite" type="Sprite" parent="Terrain2"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -216, -116 )
scale = Vector2( 1, 5.125 )
texture = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="Terrain2"]
position = Vector2( -216, -116 )
shape = SubResource( 10 )

[node name="Terrain3" type="StaticBody2D" parent="."]
position = Vector2( 504, -48 )

[node name="Sprite" type="Sprite" parent="Terrain3"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -216, -116 )
scale = Vector2( 1, 5.125 )
texture = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="Terrain3"]
position = Vector2( -216, -116 )
shape = SubResource( 10 )
